--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,5 +35,5 @@ jobs:
         context: .
         push: true
         tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/devops-quickscanlatest:${{ steps.vars.outputs.sha_short }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/devops-quickscanlatest:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-quickscan:${{ steps.vars.outputs.sha_short }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-quickscan:latest
