Working on layout

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,15 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - "Dockerfile"
+      - "src/**"
   pull_request:
     branches: [ "main" ]
+    paths:
+      - "Dockerfile"
+      - "src/**"
+  workflow_dispatch:
 
 jobs:
 
