--- a/src/DevOpsQuickScan.Infrastructure/DevOpsQuickScan.Infrastructure.csproj
+++ b/src/DevOpsQuickScan.Infrastructure/DevOpsQuickScan.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DevOpsQuickScan.Application\DevOpsQuickScan.Application.csproj" />
       <ProjectReference Include="..\DevOpsQuickScan.Domain\DevOpsQuickScan.Domain.csproj" />
     </ItemGroup>
 
