--- a/.github/workflows/infra-as-code.yml
+++ b/.github/workflows/infra-as-code.yml
@@ -42,4 +42,5 @@ jobs:
           az deployment group create \
             --resource-group $RESOURCE_GROUP \
             --template-file infra/main.bicep \
-            --parameters webAppName=$WEBAPP_NAME cosmosDbAccountName=$COSMOSDB_NAME dockerHubPassword=${{ secrets.DOCKERHUB_TOKEN }} dockerHubUsername=${{ secrets.DOCKERHUB_USERNAME }}
+            --parameters webAppName=$WEBAPP_NAME dockerHubPassword=${{ secrets.DOCKERHUB_TOKEN }} dockerHubUsername=${{ secrets.DOCKERHUB_USERNAME }}
+#cosmosDbAccountName
