Add logging + tracing to the web app

--- a/src/DevOpsQuickScan.Web/appsettings.Development.json
+++ b/src/DevOpsQuickScan.Web/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ApplicationInsights_Connection_String": "InstrumentationKey=8e39e833-6e17-4ffe-9479-7a2516da4bbb;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=7aaab793-0565-451a-9e9f-2b9d5566ab9c"
 }
