--- a/src/DevOpsQuickScan.ServiceDefaults/DevOpsQuickScan.ServiceDefaults.csproj
+++ b/src/DevOpsQuickScan.ServiceDefaults/DevOpsQuickScan.ServiceDefaults.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
 
         <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.2.0"/>
         <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.1.0"/>
