--- a/src/DevOpsQuickScan.Web/DevOpsQuickScan.Web.csproj
+++ b/src/DevOpsQuickScan.Web/DevOpsQuickScan.Web.csproj
@@ -7,10 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DevOpsQuickScan.ServiceDefaults\DevOpsQuickScan.ServiceDefaults.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="Blazor.Bootstrap" Version="3.3.1" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
     </ItemGroup>
 
