--- a/src/DevOpsQuickScan.Web/DevOpsQuickScan.Web.csproj
+++ b/src/DevOpsQuickScan.Web/DevOpsQuickScan.Web.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Blazor.Bootstrap" Version="3.3.1" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
+      <PackageReference Include="PinguApps.Blazor.QRCode" Version="1.1.3" />
     </ItemGroup>
 
     <ItemGroup>
