--- a/.github/workflows/infra-as-code.yml
+++ b/.github/workflows/infra-as-code.yml
@@ -42,3 +42,24 @@ jobs:
             --resource-group $RESOURCE_GROUP \
             --template-file infra/main.bicep \
             --parameters webAppName=$WEBAPP_NAME dockerHubPassword=${{ secrets.DOCKERHUB_TOKEN }} dockerHubUsername=${{ secrets.DOCKERHUB_USERNAME }}
+            --output json > outputs.json
+          cat outputs.json
+
+      - name: Read outputs
+        id: outputs
+        run: |
+          STORAGE_ACCOUNT_NAME=$(jq -r '.storageAccountName' outputs.json)
+          echo "STORAGE_ACCOUNT_NAME=$STORAGE_ACCOUNT_NAME" >> $GITHUB_ENV
+          STORAGE_ACCOUNT_KEY=$(jq -r '.storageAccountKey' outputs.json)
+          echo "STORAGE_ACCOUNT_KEY=$STORAGE_ACCOUNT_KEY" >> $GITHUB_ENV
+
+      - name: Upload seed JSON to blob container
+        run: |
+          az storage blob upload \
+            --account-name $STORAGE_ACCOUNT_NAME \
+            --container-name questiondata \
+            --name questions.json \
+            --file ./assets/questions.json \
+            --auth-mode key \
+            --account-key $STORAGE_ACCOUNT_KEY \
+            --overwrite
