Try to seed questions.json to blob storage, pt 2

--- a/.github/workflows/infra-as-code.yml
+++ b/.github/workflows/infra-as-code.yml
@@ -41,7 +41,8 @@ jobs:
           az deployment group create \
             --resource-group $RESOURCE_GROUP \
             --template-file infra/main.bicep \
-            --parameters webAppName=$WEBAPP_NAME dockerHubPassword=${{ secrets.DOCKERHUB_TOKEN }} dockerHubUsername=${{ secrets.DOCKERHUB_USERNAME }}
+            --parameters webAppName=$WEBAPP_NAME dockerHubPassword=${{ secrets.DOCKERHUB_TOKEN }} dockerHubUsername=${{ secrets.DOCKERHUB_USERNAME }} \
+            --query "{storageAccountName:properties.outputs.storageAccountName.value, storageAccountKey:properties.outputs.storageAccountKey.value}" \
             --output json > outputs.json
           cat outputs.json
 
