Session with serialization and deserialization to blob storage

--- a/src/DevOpsQuickScan.Infrastructure/DevOpsQuickScan.Infrastructure.csproj
+++ b/src/DevOpsQuickScan.Infrastructure/DevOpsQuickScan.Infrastructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Azure.Identity" Version="1.14.0" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DevOpsQuickScan.Domain\DevOpsQuickScan.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
