--- a/src/DevOpsQuickScan.Application/DevOpsQuickScan.Application.csproj
+++ b/src/DevOpsQuickScan.Application/DevOpsQuickScan.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DevOpsQuickScan.Domain\DevOpsQuickScan.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
