--- a/src/DevOpsQuickScan.Domain/DevOpsQuickScan.Domain.csproj
+++ b/src/DevOpsQuickScan.Domain/DevOpsQuickScan.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6" />
       <PackageReference Include="Stateless" Version="5.17.0" />
     </ItemGroup>
 
