--- a/src/DevOpsQuickScan.Api/Properties/launchSettings.json
+++ b/src/DevOpsQuickScan.Api/Properties/launchSettings.json
@@ -4,7 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
+      "launchUrl": "graphql",
       "applicationUrl": "http://localhost:5041",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -13,8 +14,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7264;http://localhost:5041",
+      "launchBrowser": false,
+      "launchUrl": "graphql",
+      "applicationUrl": "https://localhost:7264",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
