--- a/tests/DevOpsQuickScan.Tests/DevOpsQuickScan.Tests.csproj
+++ b/tests/DevOpsQuickScan.Tests/DevOpsQuickScan.Tests.csproj
@@ -14,6 +14,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.9.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3">
           <PrivateAssets>all</PrivateAssets>
@@ -33,6 +34,10 @@
       <None Update="Core\content\questions.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="FakeUserIdService.cs" />
     </ItemGroup>
 
 </Project>
