--- a/src/DevOpsQuickScan.BlazorApp/DevOpsQuickScan.BlazorApp.csproj
+++ b/src/DevOpsQuickScan.BlazorApp/DevOpsQuickScan.BlazorApp.csproj
@@ -14,4 +14,8 @@
       <_ContentIncludedByDefault Remove="Data\questions.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
+    </ItemGroup>
+
 </Project>
