--- a/src/DevOpsQuickScan.BlazorApp/Properties/launchSettings.json
+++ b/src/DevOpsQuickScan.BlazorApp/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": false,
         "launchUrl": "facilitator",
-        "applicationUrl": "https://localhost:7176;http://localhost:5119",
+        "applicationUrl": "https://localhost:7176",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
