--- a/.github/workflows/infra-as-code.yml
+++ b/.github/workflows/infra-as-code.yml
@@ -8,6 +8,10 @@ on:
       - "infra/**"
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   RESOURCE_GROUP: rg-quickscan
   LOCATION: westeurope
@@ -21,17 +25,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Log in to Azure
-        uses: azure/login@v1
+      
+      - name: Azure login
+        uses: azure/login@v2
         with:
-          creds: >
-            {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-            }
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      # - name: Log in to Azure
+      #   uses: azure/login@v1
+      #   with:
+      #     creds: >
+      #       {
+      #         "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
+      #         "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
+      #         "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+      #         "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+      #       }
 
       - name: Create resource group if it doesn't exist
         run: |
