Add environment to deploy job in workflow

--- a/.github/workflows/infra-as-code.yml
+++ b/.github/workflows/infra-as-code.yml
@@ -21,6 +21,7 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: devops-quickscan-azure
 
     steps:
       - name: Checkout code
