--- a/src/DevOpsQuickScan.BlazorApp/DevOpsQuickScan.BlazorApp.csproj
+++ b/src/DevOpsQuickScan.BlazorApp/DevOpsQuickScan.BlazorApp.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>14</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\DevOpsQuickScan.Core\DevOpsQuickScan.Core.csproj" />
+      <ProjectReference Include="..\DevOpsQuickScan.ServiceDefaults\DevOpsQuickScan.ServiceDefaults.csproj" />
     </ItemGroup>
 
     <ItemGroup>
