--- a/tests/DevOpsQuickScan.Tests/DevOpsQuickScan.Tests.csproj
+++ b/tests/DevOpsQuickScan.Tests/DevOpsQuickScan.Tests.csproj
@@ -15,7 +15,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-        <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="xunit" Version="2.9.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
           <PrivateAssets>all</PrivateAssets>
@@ -29,6 +29,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\DevOpsQuickScan.BlazorApp\DevOpsQuickScan.BlazorApp.csproj" />
+      <ProjectReference Include="..\..\src\DevOpsQuickScan.Infrastructure\DevOpsQuickScan.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -39,6 +40,11 @@
 
     <ItemGroup>
       <Compile Remove="FakeUserIdService.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Application\Sessions\" />
+      <Folder Include="Core\content\sessions\" />
     </ItemGroup>
 
 </Project>
